--- a/RCReminder/RCReminder.csproj
+++ b/RCReminder/RCReminder.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <EmbeddedResource Include="EntryPoint.resx">
       <DependentUpon>EntryPoint.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -97,6 +98,7 @@
     </Compile>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
